# sph-gl

./: .gitignore  CMakeLists.txt  GasoViz.sln  README.md  main.cpp  sphGL.sln  sphGL.vcxproj  sphGL.vcxproj.filters  sphGLSolution.sln  xmake.lua
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  toolchain
Dependencies/GLAD/: glad.c
Dependencies/GLAD/include/GLAD/: glad.h
GasoViz/: GasoViz.filters  GasoViz.vcxproj  main.cpp
GasoViz/Headers/: Shader.h  camera.h  csv.h
GasoViz/Shaders/: shader.fs
GasoViz/src/: csvReader.cpp  glad.c  glfwHandler.cpp  main.cpp
GasoViz/src/graphics/: Shader.h  camera.cpp  camera.h
GasoViz/src/shaders/: shader.vs
GasoViz/src/utils/: csvReader.cpp
sphGL/: GasoViz.vcxproj  main.cpp
sphGL/src/graphics/: camera.h  shader.cpp  window.cpp  window.h
sphGL/src/shaders/: shader.fs
sphGL/src/utils/: csvReader.cpp  csvReader.h
src/: main.cpp
src/graphics/: Shader.h  camera.h  shader.cpp  window.cpp  window.h
src/graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
src/shaders/: shader.fs  shader.vs
src/utils/: csvReader.cpp  datamanager.cpp  datamanager.h  filesize.h  particle.h
